syntax = "proto3";

option go_package = "genprotos/";

package protos;

service UserService {
    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse){}
}


message LoginUserRequest {
    string user_name = 1;
    string password  = 2;
}


message LoginUserResponse{
    string user_name = 1;
    string id =2;
    string solder_id=3;
}

